pylint error fix

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,9 +20,9 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          if [[ $git ls-files '*.py' == "" ]]; then
-                echo "No py files found"
-            else 
+          if [[ $git ls-files '*.py' != "" ]]; then
                 echo "Run pylint on files $(git ls-files '*.py') "
+            else 
+                echo "No py files found"
             fi
         #continue-on-error: true
