--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Analysing the code with pylint
         run: |
           if test -f '*.py'; then
-              pylint $(git ls-files '*.py')"
+              pylint $(git ls-files '*.py')
           fi
