--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,6 +20,6 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          if test -f '*.py'; then
+          if test -f .py; then
               pylint $(git ls-files '*.py')
           fi
