--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,6 +20,8 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          if test -f .py; then
+          if [ -f '*.py' ]; then
               pylint $(git ls-files '*.py')
+          else
+              echo "No python file exits"
           fi
