--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Analysing the code with pylint
         run: |
           if [ -f $(git ls-files '*.py') ]; then
-              pylint $(git ls-files '*.py')
+              pylint $(git ls-files '*.py') --disable=missing-docstring
           else
               echo "No python file exits"
           fi
