--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,7 +20,7 @@ jobs:
           pip install pylint
       - name: Analysing the code with pylint
         run: |
-          pythonFileCount=$(ls *.py 2>/dev/null | wc -l)
+          pythonFileCount=$(find /import/ -maxdepth 1 -type f -name '*.py' | wc -l)
           if [ $pythonFileCount -gt 0 ]; then
               pylint $(git ls-files '*.py') --disable=missing-docstring
           else
