--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -13,18 +13,11 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
 
-      - id: cache-pipenv
-        uses: actions/cache@v1
-        with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-
       - name: Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           pip install pytest
 
       - name: Run tests
         run: |
-          pytest Unit_Testing/demo_1.py
+          python3 -m unittest demo_1.py demo_2.py -v
