--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           pythonFileCount=$(find -type f -name '*.py' | wc -l)
           if [ $pythonFileCount -gt 0 ]; then
-              pylint $(git ls-files '*.py') --disable=missing-docstring,C0413
+              pylint $(git ls-files '*.py') --disable=missing-docstring,C0413,C0103
           else
               echo "No python file exits"
           fi
