--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
 
+      - name: List all the files changed in current PR
+        run: |
+          declare -a files_changed=()
+          files_changed = git --no-pager diff --name-only --diff-filter=ACMRT ${{github.event.pull_request.base.sha}} ${{ github.event.pull_request.head.sha }}
+          echo ${files_changed[@]}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
