--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -15,8 +15,9 @@ jobs:
 
       - name: List all the files changed in current PR
         run: |
-          { " git--no-pager diff --name-only --diff-filter=ACMRT ${{github.event.pull_request.base.sha}} ${{ github.event.pull_request.head.sha }} " } >> $files_changed
-          echo ${files_changed[@]}
+          my_var="Hello World"
+          echo "Output [$my_var]"
+          git--no-pager diff --name-only --diff-filter=ACMRT ${{github.event.pull_request.base.sha}} ${{ github.event.pull_request.head.sha }} >> $GITHUB_OUTPUT
 
       - name: Install dependencies
         run: |
