--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -15,7 +15,9 @@ jobs:
 
       - name: List all the files changed in current PR
         run: |
-          git --no-pager diff --name-only --diff-filter=ACMRT ${{github.event.pull_request.base.sha}} ${{ github.event.pull_request.head.sha }} >> $GITHUB_OUTPUT
+          declare -a filesChanged
+          filesChanged=$(git diff --name-only --diff-filter=ACMRT ${{github.event.pull_request.base.sha}} ${{ github.event.pull_request.head.sha }})
+          echo ${filesChanged[@]}
 
       - name: Install dependencies
         run: |
