--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
 
       - name: Setup Python
         uses: actions/setup-python@v2
@@ -16,7 +18,7 @@ jobs:
       - name: List all the files changed in current PR
         run: |
           declare -a filesChanged
-          filesChanged=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
+          filesChanged=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.workflow_run.head_sha }} ${{ github.event.pull_request.head.sha }})
           echo ${filesChanged[@]}
 
       - name: Install dependencies
