--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -18,8 +18,9 @@ jobs:
       - name: List all the files changed in current PR
         run: |
           declare -a filesChanged
+          git diff --name-only --diff-filter=ACMRT ${{ github.event.workflow_run.head_sha }} ${{ github.event.pull_request.head.sha }}
           filesChanged=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.workflow_run.head_sha }} ${{ github.event.pull_request.head.sha }})
-          echo ${filesChanged[@]}
+          echo "${filesChanged[@]}"
 
       - name: Install dependencies
         run: |
