--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -30,10 +30,13 @@ jobs:
           check_file=" samplePythonfiles/demo_1.py "
           echo $check_file
 
-          unit_test=$check_file | cut -c-19
+          unit_test=awk 'substr($check_file, 19)'
 
-          echo "$unit_test"
-          if $check_file in ${filesChanged[@]};
+          #unit_test=$check_file | cut -c-19
+          echo $unit_test
+
+          # if $check_file in ${filesChanged[@]};
+          if [[ $filesChanged[@] == *"$check_file"* ]];
           then
             cd unitTesting
             python3 -m unittest $unit_test -v
