Unit tests action modified

--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -22,21 +22,27 @@ jobs:
 
       - name: Run Unit tests
         run: |
+          cd unitTesting
+
+          # Saves the PR's modified files name
           declare -a filesChanged
           filesChanged=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
-          # echo "${filesChanged[@]}"
 
-          tests_list= ("samplePythonfiles/demo_1.py", "samplePythonfiles/demo_1.py")
-          echo $tests_list
+          # Need to send the list of all unit tests names in tests_list array
+          declare -a tests_list
+          tests_list=("samplePythonfiles/demo_1.py" "samplePythonfiles/demo_2.py")
 
+          #Looping through the array and running the tests if match found.
           for key in "${!tests_list[@]}";
           do
-            echo $tests_list[$key]
-            if [[ $filesChanged[@] == "$tests_list[$key]" ]];
-            then
-              cd unitTesting
-              python3 -m unittest ($tests_list[1] | cut -d'/' -f2) -v
-            else
-              echo "No Unit tests to run"
-            fi
+            #echo "${tests_list[$key]}"
+            for value in "${!filesChanged[@]}";
+            do
+              #echo "${filesChanged[$value]}"
+              if [[ ${filesChanged[$value]} == ${tests_list[$key]} ]];
+              then
+                python3 -m unittest "${tests_list[key]} | cut -d'/' -f2" -v
+                break
+              fi
+            done
           done
