--- a/.github/workflows/Python_Unit_Tesing.yml
+++ b/.github/workflows/Python_Unit_Tesing.yml
@@ -35,10 +35,10 @@ jobs:
           #Looping through the array and running the tests if match found.
           for key in "${!tests_list[@]}";
           do
-            #echo "${tests_list[$key]}"
+            echo "${tests_list[$key]}"
             for value in "${!filesChanged[@]}";
             do
-              #echo "${filesChanged[$value]}"
+              echo "${filesChanged[$value]}"
               if [[ ${filesChanged[$value]} == ${tests_list[$key]} ]];
               then
                 python3 -m unittest "${tests_list[key]} | cut -d'/' -f2" -v
