--- a/samplePythonfiles/catalog-info.yaml
+++ b/samplePythonfiles/catalog-info.yaml
@@ -1,12 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: git-actions-demo
-  description: A demo repository showing GitHub Actions workflows with Python samples and unit testing.
+  name: sample-python-files
+  description: Python sample files demonstrating code examples in this repo.
   annotations:
     github.com/project-slug: manjunath-grl/Git-Actions-Demo
-    backstage.io/techdocs-ref: dir:docs
 spec:
-  type: service
+  type: library
   lifecycle: experimental
   owner: user:manjunath
